Tidying up LabelStore related APIs (CORE-764)
- Clarifying contract around null/empty labels and keys with contract
  tests
- Adjusting implementations to ensure they meet the contract
- Fleshed out JavaDoc where appropriate
- CachingLabelsStore allows for customising the individual cache sizes
  as needed
- Extract DictionaryLabelStore decorator into own base
  CachingDictionaryLabelsStore decorator so can decorate the two
  interfaces independently if needed