@@ -2,18 +2,17 @@
  * Copyright (C) 2024-2025 Telicent Limited
  */
 package io.telicent.smart.cache.storage.labels.lmdb;
+
 import io.telicent.smart.cache.storage.AbstractStorage;
 import io.telicent.smart.cache.storage.labels.DictionaryLabelsStore;
+import org.apache.commons.collections4.CollectionUtils;
 import org.lmdbjava.*;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.file.Files;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
 
 import static org.lmdbjava.ByteArrayProxy.PROXY_BA;
@@ -22,11 +21,8 @@ import static org.lmdbjava.DbiFlags.MDB_CREATE;
 import static java.nio.charset.StandardCharsets.UTF_8;
 
 /**
- * LMDB-based implementation of DictionaryLabelsStore.
- * Uses three named databases:
- *  - labels_to_ids  : label bytes -> long id
- *  - ids_to_labels  : long id -> label bytes
- *  - meta           : metadata (currently just next_id)
+ * LMDB-based implementation of DictionaryLabelsStore. Uses three named databases: - labels_to_ids  : label bytes ->
+ * long id - ids_to_labels  : long id -> label bytes - meta           : metadata (currently just next_id)
  */
 public class LMDBLabelsStore extends AbstractStorage implements DictionaryLabelsStore {
 
@@ -45,13 +41,13 @@ public class LMDBLabelsStore extends AbstractStorage implements DictionaryLabels
         Files.createDirectories(dir.toPath());
 
         this.env = Env.create(PROXY_BA)
-                .setMapSize(1_024L * 1_024L * 1_024L)
-                .setMaxDbs(4)
-                .open(dir);
+                      .setMapSize(1_024L * 1_024L * 1_024L)
+                      .setMaxDbs(4)
+                      .open(dir);
 
         this.labelsToIdsDb = env.openDbi("labels_to_ids", MDB_CREATE);
         this.idsToLabelsDb = env.openDbi("ids_to_labels", MDB_CREATE);
-        this.metaDb        = env.openDbi("meta", MDB_CREATE);
+        this.metaDb = env.openDbi("meta", MDB_CREATE);
 
         initCounter();
     }
@@ -84,7 +80,9 @@ public class LMDBLabelsStore extends AbstractStorage implements DictionaryLabels
     @Override
     public long idForLabel(byte[] labelBytes) {
         ensureNotClosed();
-        Objects.requireNonNull(labelBytes, "label cannot be null");
+        if (DictionaryLabelsStore.isInvalidByteSequence(labelBytes)) {
+            throw new NullPointerException("label cannot be null/empty");
+        }
 
         synchronized (lock) {
             try (Txn<byte[]> txn = env.txnWrite()) {
@@ -109,15 +107,16 @@ public class LMDBLabelsStore extends AbstractStorage implements DictionaryLabels
     @Override
     public Map<byte[], Long> idsForLabels(List<byte[]> labels) {
         ensureNotClosed();
-        if (labels == null || labels.isEmpty()) {
-            return Map.of();
+        if (CollectionUtils.isEmpty(labels)) {
+            return Collections.emptyMap();
         }
         Map<byte[], Long> result = new HashMap<>();
         for (byte[] label : labels) {
-            if (label != null) {
-                long id = idForLabel(label);
-                result.put(label, id);
+            if (DictionaryLabelsStore.isInvalidByteSequence(label)) {
+                continue;
             }
+            long id = idForLabel(label);
+            result.put(label, id);
         }
         return result;
     }
@@ -135,7 +134,7 @@ public class LMDBLabelsStore extends AbstractStorage implements DictionaryLabels
     @Override
     public Map<Long, byte[]> labelsForIds(List<Long> ids) {
         ensureNotClosed();
-        if (ids == null || ids.isEmpty()) {
+        if (CollectionUtils.isEmpty(ids)) {
             return Map.of();
         }
         Map<Long, byte[]> result = new HashMap<>();
@@ -151,7 +150,7 @@ public class LMDBLabelsStore extends AbstractStorage implements DictionaryLabels
     }
 
     @Override
-    public long labelSize() {
+    public long labelCount() {
         ensureNotClosed();
         try (Txn<byte[]> txn = env.txnRead()) {
             return this.labelsToIdsDb.stat(txn).entries;
